projetos/oke/nexus-campaign-webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-prod
  labels:
    environment: production
