projetos/oke/nexus-campaign-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-campaign-webapp-route
  annotations:
    external-dns.alpha.kubernetes.io/hostname: campaign.nexusplatform.com.br
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "campaign.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-campaign-webapp-service
      port: 80
